# shellio

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pr-check.yml  release.yml
docs/: index.html  index.md  script.js  style.css
example/: sample.json
src/: cli.yml  main.rs  spec.rs  util.rs
