[package]
name = "shellio"
version = "0.1.0"
authors = ["jiko21 <daikikojima0531@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3", features=["yaml"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.0.0"
